# book-vector

./: .gitignore  NOTICE  PLAN.md  README.md
pipeline/: README.md  pyproject.toml
pipeline/bookvector/: __init__.py  acquire.py  cluster.py  config.py  curate.py  embed.py  evaluate.py  export.py  extract.py  facets.py  index.py  ingest.py  neighbors.py  reduce.py  vectors.py
pipeline/data/: eval_pairs.jsonl
pipeline/scripts/: run_pipeline.py
pipeline/tests/: test_facets.py
web/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vercel.json  vite.config.ts
web/api/: query.ts
web/data/: vectors.meta.json
web/public/data/: galaxy.json
web/server/: queryCore.ts
web/src/: App.tsx  types.ts
web/src/components/: BookPicker.tsx  BookTooltip.tsx  Constellation.tsx  FacetLens.tsx  Galaxy.tsx  GenreList.tsx  LensToggle.tsx  Sidebar.tsx
web/src/lib/: api.ts  data.ts  useMediaQuery.ts
