[project]
name = "bookvector"
version = "0.1.0"
description = "book-vector offline pipeline: acquire, extract facets, embed, cluster, index"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.40",         # Haiku + Batch facet extraction (D6)
    "sentence-transformers>=3", # local per-facet embeddings (D5)
    "umap-learn>=0.5",         # galaxy projection (D9/D11)
    "hdbscan>=0.8",            # emergent clustering (D8)
    "sqlite-vec>=0.1",         # per-facet vector index / serving (D9)
    "numpy>=1.26",
    "pandas>=2.0",
    "tqdm>=4.66",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.6"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["bookvector*"]

[tool.ruff]
line-length = 100
